--- a/source/phonegap/platforms/ios/HandCrowd/HandCrowd-Info.plist
+++ b/source/phonegap/platforms/ios/HandCrowd/HandCrowd-Info.plist
@@ -110,14 +110,36 @@
           <string>handcrowd</string>
         </array>
       </dict>
+      <dict>
+        <key>CFBundleURLSchemes</key>
+        <array>
+          <string>handcrowd</string>
+        </array>
+      </dict>
+      <dict>
+        <key>CFBundleURLSchemes</key>
+        <array>
+          <string>handcrowd</string>
+        </array>
+      </dict>
+      <dict>
+        <key>CFBundleURLSchemes</key>
+        <array>
+          <string>handcrowd</string>
+        </array>
+      </dict>
+      <dict>
+        <key>CFBundleURLSchemes</key>
+        <array>
+          <string>handcrowd</string>
+        </array>
+      </dict>
     </array>
     <key>CFBundleVersion</key>
     <string>2.3.15</string>
     <key>LSRequiresIPhoneOS</key>
     <true/>
     <key>NSLocationWhenInUseUsageDescription</key>
-    <string></string>
-    <key>NSMainNibFile</key>
     <string></string>
     <key>NSMainNibFile~ipad</key>
     <string></string>
@@ -224,5 +246,7 @@
         <string>{768, 1024}</string>
       </dict>
     </array>
+    <key>UILaunchStoryboardName</key>
+    <string>MainViewController</string>
   </dict>
 </plist>
