--- a/source/phonegap/platforms/ios/HandCrowd/HandCrowd-Info.plist
+++ b/source/phonegap/platforms/ios/HandCrowd/HandCrowd-Info.plist
@@ -23,7 +23,7 @@
     <key>CFBundlePackageType</key>
     <string>APPL</string>
     <key>CFBundleShortVersionString</key>
-    <string>2.3.15</string>
+    <string>2.3.16</string>
     <key>CFBundleSignature</key>
     <string>????</string>
     <key>CFBundleURLTypes</key>
@@ -112,9 +112,15 @@
           <string>handcrowd</string>
         </array>
       </dict>
+      <dict>
+        <key>CFBundleURLSchemes</key>
+        <array>
+          <string>handcrowd</string>
+        </array>
+      </dict>
     </array>
     <key>CFBundleVersion</key>
-    <string>2.3.15</string>
+    <string>2.3.16</string>
     <key>LSRequiresIPhoneOS</key>
     <true/>
     <key>NSLocationWhenInUseUsageDescription</key>
